src/objects/NyukinData__c.object
<CustomObject>
    <fields>
        <fullName>Biko__c</fullName>
        <defaultValue>&quot;理由不明の入金&quot;</defaultValue>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeshikomiJutoZumiFlg__c</fullName>
        <formula>ZanKingaku__c &lt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>残金額　が無くなった場合ON。
不明入金が請求消込に全て充当された場合ON。</inlineHelpText>
        <label>消込充当済フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeshikomiKingakuKei__c</fullName>
        <inlineHelpText>消込値引データの消込入金額の合計値</inlineHelpText>
        <label>消込入金額計</label>
        <summarizedField>NyukinKeshikomiLink__c.KeshikomiKingakuNamachi__c</summarizedField>
        <summaryForeignKey>NyukinKeshikomiLink__c.NyukinData__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KeshikomiMikakuteiCounter__c</fullName>
        <inlineHelpText>消込未確定フラグ　がONの　入金充当リンク　の件数。</inlineHelpText>
        <label>￥￥_消込未確定カウンタ</label>
        <summarizedField>NyukinKeshikomiLink__c.KeshikomiMikakuteiSuNamachi__c</summarizedField>
        <summaryForeignKey>NyukinKeshikomiLink__c.NyukinData__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NyukinBi__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>入金日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NyukinGaku__c</fullName>
        <label>入金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SeikyuAccount__c</fullName>
        <label>請求取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SeikyuAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ZanKingaku__c</fullName>
        <formula>NyukinGaku__c  -  KeshikomiKingakuKei__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>入金額　－　消込入金額計　の残金</inlineHelpText>
        <label>残金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>入金データ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NyukinGaku__c</columns>
        <columns>NyukinBi__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>入金-{0000000000}</displayFormat>
        <label>入金データ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>